--- a/.github/workflows/debian-multi-arch-docker-qemu-golang-test.yml
+++ b/.github/workflows/debian-multi-arch-docker-qemu-golang-test.yml
@@ -10,10 +10,10 @@ jobs:
       matrix:
         CC: ["clang"]
         DOCKER_ARCH_ARGS: ["--platform linux/arm64/v8 arm64v8/debian",
-                           "--platform linux/amd64 amd64/debian"] #,
-           #               "--platform linux/riscv64 riscv64/debian",
-           #               "--platform linux/ppc64le ppc64le/debian",
-           #               "--platform linux/s390x s390x/debian"]
+                           "--platform linux/amd64 amd64/debian"],
+                           "--platform linux/riscv64 riscv64/debian",
+                           "--platform linux/ppc64le ppc64le/debian",
+                           "--platform linux/s390x s390x/debian"]
       fail-fast: false
     steps:
       - name: Set up QEMU
@@ -33,7 +33,7 @@ jobs:
           uname -a
 
       - name: Run Golang tests in Docker under qemu
-        continue-on-error: true
+        continue-on-error: false
         run: |
           docker run \
             -v $(pwd):/${{ github.workspace }} \
