try again after removing lint

--- a/.github/workflows/debian-multi-arch-docker-qemu-golang-test.yml
+++ b/.github/workflows/debian-multi-arch-docker-qemu-golang-test.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         CC: ["clang"]
         DOCKER_ARCH_ARGS: ["--platform linux/arm64/v8 arm64v8/debian",
-                           "--platform linux/amd64 amd64/debian"],
+                           "--platform linux/amd64 amd64/debian",
                            "--platform linux/riscv64 riscv64/debian",
                            "--platform linux/ppc64le ppc64le/debian",
                            "--platform linux/s390x s390x/debian"]
