try  -fno-stack-protector for alpine

--- a/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
+++ b/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
@@ -39,7 +39,7 @@ jobs:
             -v $(pwd):/${{ github.workspace }} \
             -w ${{ github.workspace }} \
             -e "CC=${{ matrix.CC }}" \
-            -e "CFLAGS=-fno-lto" \
+            -e "CFLAGS=-fno-lto -fno-stack-protector" \
             --rm \
             ${{ matrix.DOCKER_ARCH_ARGS}} \
             /bin/sh -c "./misc/test-golang-alpine-docker-qemu.sh"
