--- a/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
+++ b/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
@@ -10,10 +10,10 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         DOCKER_ARCH_ARGS: ["--platform linux/arm64/v8 arm64v8/alpine:edge",
-                           "--platform linux/amd64 amd64/alpine:edge",
-                           "--platform linux/riscv64 riscv64/alpine:edge",
-                           "--platform linux/ppc64le ppc64le/alpine:edge",
-                           "--platform linux/s390x s390x/alpine:edge"]
+                           "--platform linux/amd64 amd64/alpine:edge"] #,
+                           #                           "--platform linux/riscv64 riscv64/alpine:edge",
+                           #"--platform linux/ppc64le ppc64le/alpine:edge",
+                           #"--platform linux/s390x s390x/alpine:edge"]
       fail-fast: false
     steps:
       - name: Set up QEMU
