--- a/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
+++ b/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
@@ -16,21 +16,27 @@ jobs:
                            #"--platform linux/s390x s390x/alpine:edge"]
       fail-fast: false
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      #      - name: Set up QEMU
+      #  uses: docker/setup-qemu-action@v3
 
       - name: checkout
         uses: actions/checkout@v4
 
       - name: Install requirements
         run: |
-          sudo apt install -y --no-install-recommends docker
+          sudo apt install -y --no-install-recommends docker.io qemu-user-static
 
       - name: check kernel
         run: |
           mount | grep binfmt_misc
           docker info
           uname -a
+
+      - name: Setup qemu user static
+        continue-on-error: false
+        run: |
+          docker pull multiarch/qemu-user-static
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 
       - name: Run Golang tests in Docker under qemu
         continue-on-error: false
