try harder with 24.04

--- a/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
+++ b/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
 jobs:
   alpine-multiarch-64bit-qemu-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         CC: ["clang", "gcc"]
