--- a/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
+++ b/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       matrix:
         CC: ["clang", "gcc"]
-        DOCKER_ARCH_ARGS: ["--platform linux/arm64/v8 arm64v8/alpine:edge",
-                           "--platform linux/amd64 amd64/alpine:edge"] #,
+        DOCKER_ARCH_ARGS: ["--platform linux/arm64/v8 arm64v8/alpine:3.18",
+                           "--platform linux/amd64 amd64/alpine:3.18"] #,
                            #                           "--platform linux/riscv64 riscv64/alpine:edge",
                            #"--platform linux/ppc64le ppc64le/alpine:edge",
                            #"--platform linux/s390x s390x/alpine:edge"]
