--- a/.github/workflows/debian-multi-arch-docker-qemu-golang-test-64bit.yml
+++ b/.github/workflows/debian-multi-arch-docker-qemu-golang-test-64bit.yml
@@ -5,15 +5,15 @@ on:
     branches: ["main"]
 jobs:
   debian-multiarch-64bit-qemu-test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         CC: ["clang", "gcc"]
         DOCKER_ARCH_ARGS: ["--platform linux/s390x s390x/debian:sid-slim",
-                           "--platform linux/amd64 amd64/debian:sid-slim"] #,
-          #"--platform linux/arm64/v8 arm64v8/debian:sid-slim",
-          #                 "--platform linux/riscv64 riscv64/debian:sid-slim",
-          #                 "--platform linux/ppc64le ppc64le/debian:sid-slim",
+                           "--platform linux/amd64 amd64/debian:sid-slim",
+                           "--platform linux/arm64/v8 arm64v8/debian:sid-slim",
+                           "--platform linux/riscv64 riscv64/debian:sid-slim",
+                           "--platform linux/ppc64le ppc64le/debian:sid-slim"]
       fail-fast: false
     steps:
     # - name: Set up QEMU
@@ -25,7 +25,7 @@ jobs:
       - name: Install requirements
         run: |
           sudo apt update
-          sudo apt install -y docker.io qemu-user-static
+          sudo apt install -y docker qemu-user-static
 
       - name: check kernel
         run: |
