--- a/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
+++ b/.github/workflows/alpine-multi-arch-docker-qemu-golang-test-64bit.yml
@@ -10,11 +10,11 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         DOCKER_ARCH_ARGS: ["--platform linux/arm64/v8 arm64v8/alpine:3.18",
-                           "--platform linux/amd64 amd64/alpine:3.18",
-                           "--platform linux/riscv64 riscv64/alpine:edge",
-                           "--platform linux/ppc64le ppc64le/alpine:3.18",
-                           "--platform linux/s390x s390x/alpine:3.18"]
-      fail-fast: false
+                           "--platform linux/amd64 amd64/alpine:3.18"] #,
+        #                  "--platform linux/riscv64 riscv64/alpine:edge",
+        #                  "--platform linux/ppc64le ppc64le/alpine:3.18",
+        #                  "--platform linux/s390x s390x/alpine:3.18"]
+      fa#l-fast: false
     steps:
       #      - name: Set up QEMU
       #  uses: docker/setup-qemu-action@v3
