Add bash to freebsd-fiat-test.yml

--- a/.github/workflows/freebsd-fiat-test.yml
+++ b/.github/workflows/freebsd-fiat-test.yml
@@ -26,8 +26,10 @@ jobs:
           freebsd-version
           pkg install -y gmake
           pkg install -y llvm-13
+          pkg install -y bash
           clang -v
           gmake -v
+          echo $SHELL
 
         run: |
           HIGHCTIDH_PORTABLE=1 gmake
