--- a/.github/workflows/dragonflybsd-fiat-test.yml
+++ b/.github/workflows/dragonflybsd-fiat-test.yml
@@ -25,8 +25,10 @@ jobs:
           uname -a
           pkg install -y gmake
           pkg install -y llvm16-16.0.6_6 
+          pkg install -y bash
           gmake -v
           /usr/local/bin/clang16 -v
+          echo $SHELL
 
         run: |
           HIGHCTIDH_PORTABLE=1 gmake
