--- a/.github/workflows/openbsd-fiat-test.yml
+++ b/.github/workflows/openbsd-fiat-test.yml
@@ -24,8 +24,10 @@ jobs:
         prepare: |
           uname -a
           pkg_add gmake
+          pkg_add bash
           gmake -v
           clang -v
+          echo $SHELL
 
         run: |
           HIGHCTIDH_PORTABLE=1 gmake
