--- a/.github/workflows/freebsd-fiat-test-non-gnu-make.yaml
+++ b/.github/workflows/freebsd-fiat-test-non-gnu-make.yaml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: FreeBSD clang build of fiat backend
+    name: FreeBSD clang build of fiat backend (non-GNU make)
     env:
       LANG: "C"
       LD: "/usr/bin/ld"
