--- a/.github/workflows/docker-oraclelinux.yaml
+++ b/.github/workflows/docker-oraclelinux.yaml
@@ -19,10 +19,14 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Oracle Linux deps
-      run: ./misc/install-oraclelinux-deps.sh
+      run: |
+        ./misc/install-oraclelinux-deps.sh
+        dnf install -y autoconf automake libtool
 
     - name: Build
-      run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --prefix=/usr/local --enable-asm=${{ matrix.ASM }} && make
+      run: |
+        autoreconf -fi
+        CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --prefix=/usr/local --enable-asm=${{ matrix.ASM }} && make
 
     - name: Test install
       run: sudo make install
