--- a/.github/workflows/windows-msys-64bit-gcc-ucrt-msvcrt-golang-test.yaml
+++ b/.github/workflows/windows-msys-64bit-gcc-ucrt-msvcrt-golang-test.yaml
@@ -31,10 +31,13 @@ jobs:
             make
             git
             gcc
+            autoconf
+            automake
+            libtool
 
       - name: Build and install C library
         shell: bash
-        run: ./configure --prefix="$HOME/inst" --disable-shared --enable-static && make install
+        run: autoreconf -fi && ./configure --prefix="$HOME/inst" --disable-shared --enable-static && make install
 
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
