--- a/.github/workflows/docker-alma.yaml
+++ b/.github/workflows/docker-alma.yaml
@@ -19,10 +19,13 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Almalinux deps
-      run: ./misc/install-alma-deps.sh
+      run: |
+        ./misc/install-alma-deps.sh
+        dnf install -y autoconf automake libtool
 
     - name: Build C library
       run: |
+        autoreconf -fi
         CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --enable-asm=${{ matrix.ASM }}
         make
     - name: Test install
