--- a/.github/workflows/docker-alpine-asan.yaml
+++ b/.github/workflows/docker-alpine-asan.yaml
@@ -22,13 +22,17 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install alpine deps
-      run: ./misc/install-alpine-deps.sh
+      run: |
+        ./misc/install-alpine-deps.sh
+        apk add --no-cache autoconf automake libtool
 
     - name: Build and install C library with asan
       env:
         CFLAGS: -fsanitize=address -fno-omit-frame-pointer -g3 -fno-lto
         LDFLAGS: -Wl,-z,stack-size=0x1F40000
-      run: ./configure --prefix="$HOME/inst" --enable-asm=${{ matrix.ASM }} && make install
+      run: |
+        autoreconf -fi
+        ./configure --prefix="$HOME/inst" --enable-asm=${{ matrix.ASM }} && make install
 
     - name: Show go env
       run: go env
