--- a/.github/workflows/docker-amazonlinux.yaml
+++ b/.github/workflows/docker-amazonlinux.yaml
@@ -23,13 +23,17 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install Amazon Linux deps
-      run: ./misc/install-amazonlinux-deps.sh
+      run: |
+        ./misc/install-amazonlinux-deps.sh
+        yum install -y autoconf automake libtool
 
     - name: Gather compiler info
       run: gcc -v && clang -v
 
     - name: Build
-      run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --prefix=/usr/local --enable-asm=${{ matrix.ASM }} && make
+      run: |
+        autoreconf -fi
+        CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --prefix=/usr/local --enable-asm=${{ matrix.ASM }} && make
 
     - name: Test install
       run: sudo make install
