--- a/.github/workflows/docker-arch.yaml
+++ b/.github/workflows/docker-arch.yaml
@@ -19,10 +19,14 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Arch deps
-      run: ./misc/install-arch-deps.sh
+      run: |
+        ./misc/install-arch-deps.sh
+        pacman -Syu --noconfirm autoconf automake libtool
 
     - name: Build
-      run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --prefix=/usr/local --enable-asm=${{ matrix.ASM }} && make
+      run: |
+        autoreconf -fi
+        CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --prefix=/usr/local --enable-asm=${{ matrix.ASM }} && make
 
     - name: Test install
       run: sudo make install
