--- a/.github/workflows/macos-fiat-test.yaml
+++ b/.github/workflows/macos-fiat-test.yaml
@@ -21,7 +21,7 @@ jobs:
       uses: Homebrew/actions/setup-homebrew@master
 
     - name: Install tools
-      run: brew install make
+      run: brew install make autoconf automake libtool
 
     - name: Gather kernel environment
       run: |
@@ -34,4 +34,4 @@ jobs:
         make -v
 
     - name: compile and test-quick
-      run: CC=${{ matrix.CC }} ./configure && make test-quick
+      run: autoreconf -fi && CC=${{ matrix.CC }} ./configure && make test-quick
