--- a/.github/workflows/macos-golang-test.yaml
+++ b/.github/workflows/macos-golang-test.yaml
@@ -17,9 +17,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+
+      - name: Install tools
+        run: brew install make autoconf automake libtool
+
       - name: Build and install C library
         shell: bash
-        run: ./configure --prefix="$HOME/inst" --disable-shared --enable-static && make install
+        run: autoreconf -fi && ./configure --prefix="$HOME/inst" --disable-shared --enable-static && make install
 
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
