--- a/.github/workflows/macos-python-test.yaml
+++ b/.github/workflows/macos-python-test.yaml
@@ -19,6 +19,13 @@ jobs:
       with:
         python-version:  ${{ matrix.python-version }}
 
+    - name: Set up Homebrew
+      id: set-up-homebrew
+      uses: Homebrew/actions/setup-homebrew@master
+
+    - name: Install tools
+      run: brew install make autoconf automake libtool
+
     - name: Gather runtime environment
       shell: bash
       run: |
@@ -28,6 +35,7 @@ jobs:
     - name: Build and install C library
       shell: bash
       run: |
+        autoreconf -fi
         ./configure --prefix="${HOME}/inst"
         make install
 
