--- a/.github/workflows/omnios-fiat-test.yaml
+++ b/.github/workflows/omnios-fiat-test.yaml
@@ -22,9 +22,11 @@ jobs:
           psrinfo -vp
           cat /etc/release
           pkg install developer/object-file developer/linker developer/build/gnu-make system/header system/library/math shell/bash developer/gcc12
+          pkg install developer/build/autoconf developer/build/automake developer/build/libtool
           make -v
           gcc -v
 
         run: |
+          autoreconf -fi
           ./configure
           make test-quick
