--- a/.github/workflows/ubuntu-webassembly.yaml
+++ b/.github/workflows/ubuntu-webassembly.yaml
@@ -12,10 +12,12 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install cross compiler deps
-      run: sudo ./misc/install-ubuntu-webassembly-deps.sh
+      run: |
+        sudo ./misc/install-ubuntu-webassembly-deps.sh
+        sudo apt install -y --no-install-recommends autoconf automake libtool
 
     - name: Display compiler version
       run: ${{ matrix.CC }} -v
 
     - name: Build 
-      run: ./configure && make wasm
+      run: autoreconf -fi && ./configure && make wasm
