--- a/.github/workflows/windows-msys-64bit-clang-msvcrt-python-pip-test.yaml
+++ b/.github/workflows/windows-msys-64bit-clang-msvcrt-python-pip-test.yaml
@@ -33,6 +33,9 @@ jobs:
           mingw-w64-clang-x86_64-python-distutils-extra
           mingw-w64-x86_64-clang
           make
+          autoconf
+          automake
+          libtool
 
     - name: Gather runtime environment
       shell: msys2 {0}
@@ -46,6 +49,7 @@ jobs:
     - name: Build and install C library
       shell: msys2 {0}
       run: |
+        autoreconf -fi
         CC=${{ matrix.CC }} ./configure --prefix="$HOME/inst"
         make install
 
