--- a/.github/workflows/macos-golang-test.yaml
+++ b/.github/workflows/macos-golang-test.yaml
@@ -2,13 +2,17 @@ name: MacOS Golang build and test
 
 on: [push]
 
+env:
+  CGO_LDFLAGS: -Wl,-stack_size,0x1F40000
+  CC: clang
+
 jobs:
   build:
     runs-on: ${{ matrix.OS }}
     strategy:
       matrix:
         OS: ["macos-14"]
-        go-version: [ "1.19", "1.20", "1.21.x", "1.22.0"]
+        go-version: [ "1.20.x", "1.21.x", "1.22.7", "1.23.x"]
       fail-fast: false
 
     steps:
