force CC to be clang

--- a/.github/workflows/docker-alpine-msan.yaml
+++ b/.github/workflows/docker-alpine-msan.yaml
@@ -7,6 +7,7 @@ on:
 
 env:
   CGO_CFLAGS: -fsanitize=memory -fpie -fPIC -fPIE -fno-omit-frame-pointer -fsanitize-memory-param-retval -fsanitize-memory-track-origins -g3 -fno-lto
+  CC: clang
 
 jobs:
   docker:
@@ -29,4 +30,4 @@ jobs:
       run: go env
 
     - name: Build and test with asan
-      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} cd src/ctidh1024 && go test -v -msan ./...
+      run: HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} cd src/ctidh1024 && go test -v -msan ./...
