--- a/.github/workflows/docker-alpine-asan.yaml
+++ b/.github/workflows/docker-alpine-asan.yaml
@@ -7,13 +7,13 @@ on:
 
 env:
   CGO_CFLAGS: -fsanitize=address -fpie -fPIC -fPIE -fno-omit-frame-pointer -g3 -fno-lto 
+  CC: clang
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        CC: ["clang"]
         PORTABLE: ["0", "1"]
         CONTAINER: ["alpine:3.19.1", "alpine:3.19", "alpine:3.18.6",
                     "alpine:3.18", "alpine:3.17.7", "alpine:3.17"]
@@ -29,4 +29,4 @@ jobs:
       run: go env
 
     - name: Build and test with asan
-      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} cd src/ctidh1024 && go test -timeout 0 -asan -v ./...
+      run: HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} cd src/ctidh1024 && go test -timeout 0 -asan -v ./...
