set CC in call to go test

--- a/.github/workflows/docker-ubuntu-msan.yaml
+++ b/.github/workflows/docker-ubuntu-msan.yaml
@@ -28,4 +28,4 @@ jobs:
       run: go env
 
     - name: Build and test with asan
-      run: HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} cd src/ctidh1024 && go test -v -msan ./...
+      run: cd src/ctidh1024 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -v -msan ./...
