--- a/.github/workflows/docker-alpine-asan.yaml
+++ b/.github/workflows/docker-alpine-asan.yaml
@@ -29,4 +29,4 @@ jobs:
       run: go env
 
     - name: Build and test with asan
-      run: cd src/ctidh1024 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -timeout 0 -asan -v ./...
+      run: cd src/ctidh1024 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -o asan-test -timeout 0 -asan -v ./...
