--- a/.github/workflows/docker-alpine-msan.yaml
+++ b/.github/workflows/docker-alpine-msan.yaml
@@ -29,4 +29,4 @@ jobs:
       run: go env
 
     - name: Build and test with msan
-      run: cd src/ctidh1024 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -v -msan ./...
+      run: cd src/ctidh1024 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -v -o msan-test -msan ./...
