attempt to raise stack size at link time for cgo

--- a/.github/workflows/docker-alpine-asan.yaml
+++ b/.github/workflows/docker-alpine-asan.yaml
@@ -7,6 +7,7 @@ on:
 
 env:
   CGO_CFLAGS: -fsanitize=address -fpie -fPIC -fPIE -fno-omit-frame-pointer -g3 -fno-lto 
+  CGO_LDFLAGS: -Wl,-z,stack-size=0xFFFFFF
   CC: clang
 
 jobs:
