2048 stack size too small

--- a/.github/workflows/macos-golang-test.yaml
+++ b/.github/workflows/macos-golang-test.yaml
@@ -2,6 +2,10 @@ name: MacOS Golang build and test
 
 on: [push]
 
+env:
+  CGO_LDFLAGS: -Wl,-z,stack-size=0xFFFFFF
+  CC: clang
+
 jobs:
   build:
     runs-on: ${{ matrix.OS }}
