--- a/.github/workflows/macos-golang-test.yaml
+++ b/.github/workflows/macos-golang-test.yaml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         OS: ["macos-14"]
-        go-version: [ "1.19", "1.20", "1.21.x", "1.22.0", "1.23.x"]
+        go-version: [ "1.19", "1.20.x", "1.21.x", "1.22.7", "1.23.x"]
       fail-fast: false
 
     steps:
