--- a/.github/workflows/docker-alpine-asan.yaml
+++ b/.github/workflows/docker-alpine-asan.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   CGO_CFLAGS: -fsanitize=address -fpie -fPIC -fPIE -fno-omit-frame-pointer -g3 -fno-lto 
-  CGO_LDFLAGS: -Wl,-z,stack-size=0xFFFFFF
+  CGO_LDFLAGS: -Wl,-z,stack-size=0x1F40000
   CC: clang
 
 jobs:
