--- a/.github/workflows/docker-alpine-msan.yaml
+++ b/.github/workflows/docker-alpine-msan.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   CGO_CFLAGS: -fsanitize=memory -fpie -fPIC -fPIE -fno-omit-frame-pointer -fsanitize-memory-param-retval -fsanitize-memory-track-origins -g3 -fno-lto
-  CGO_LDFLAGS: -Wl,-z,stack-size=0xFFFFFF
+  CGO_LDFLAGS: -Wl,-z,stack-size=0x1F40000
   CC: clang
 
 jobs:
