--- a/.github/workflows/macos-golang-test.yaml
+++ b/.github/workflows/macos-golang-test.yaml
@@ -3,7 +3,7 @@ name: MacOS Golang build and test
 on: [push]
 
 env:
-  CGO_LDFLAGS: -Wl,-stack_size,0x1f40000
+  CGO_LDFLAGS: -Wl,-stack_size,0x1F40000
   CC: clang
 
 jobs:
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         OS: ["macos-14"]
-        go-version: [ "1.19", "1.20.x", "1.21.x", "1.22.7", "1.23.x"]
+        go-version: [ "1.20.x", "1.21.x", "1.22.7", "1.23.x"]
       fail-fast: false
 
     steps:
