--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,47 @@ test512
 testrandom
 docker_build_output/
 src/example-ctidh*
+aclocal.m4
+ar-lib
+autom4te.cache/
+compile
+config.guess
+config.status
+config.sub
+depcomp
+install-sh
+libtool
+ltmain.sh
+m4/
+missing
+stamp-h1
+.deps
+.dirstamp
+.libs
+*.lo
+libbase.la
+libcommon511.la
+libcommon512.la
+libcommon1024.la
+libcommon2048.la
+libhighctidh_511.la
+libhighctidh_512.la
+libhighctidh_1024.la
+libhighctidh_2048.la
+libhighctidh.la
+src/libhighctidh_511_la-*
+src/libhighctidh_512_la-*
+src/libhighctidh_1024_la-*
+src/libhighctidh_2048_la-*
+src/libhighctidh_la-*
+libhighctidh_511.pc
+libhighctidh_512.pc
+libhighctidh_1024.pc
+libhighctidh_2048.pc
+libhighctidh.pc
+configure
+config.h
+config.h.in
+config.log
+Makefile.in
+Makefile
